# pydistro_testing

./: LICENSE  README.md  not_used_setup.py  pyproject.toml  setup.py
.github/workflows/: main.yml
conda/: build.sh  meta.yaml  setup.py
src/pydistro_testing/: setup.py
src/pydistro_testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
