[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydistro_testing"
version = "1.3.17"
authors = [
  { name="Stephen Patterson", email="spatterson82@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spatterson82/pydistro_testing"
"Bug Tracker" = "https://github.com/spatterson82/pydistro_testing/issues"